syntax = "proto3";
package kpqznn;

/*********************  基础对象 ************************/

message OutCard {
    repeated int32 cardThree             = 1;
    repeated int32 cardTwo               = 2;
    int32 type                  = 3; //0:没牛； 1：牛一 ~10：牛牛；12：五花牛；13：炸弹；14：五小牛
}

message UserCards {
     repeated int32 remainCards         = 1;
}

message User{
      int32 userId                = 1; //用户ID
      int32 state                 = 2; //状态
      string nickname             = 3;
      string headImg              = 4;
      int32 sex                   = 5;
      string ip                   = 6;
      int32 position              = 7;
      int32 agree                 = 8;
      int32 onLine                = 9;
      double coin                  = 10;
      int32 betCoin               = 11;
      int32 qiang                 = 12; //抢庄
      repeated int32 remainCards           = 13;
      OutCard bestOutCardDto      = 14;
      repeated int32 allowQiang            = 15;
      repeated int32 allowBet              = 16;
      bool tongsha                = 17;
      bool tongpei                = 18;
      double startScore           = 19;
      double endScore             = 20;
      double currentScore         = 21;
      int32 score                 = 22;
      double revenue              = 23;
      bool noCoin                 = 24;
      double totalScore           = 25;
      bool hasShowCard			= 26;
  
      OutCard outCardDto          = 27;
      UserCards cards             = 28;
  }



/*********************  请求对象 ************************/

//用户准备
//USER_READY = 2106;
message UserReadyRequest{
      int32  tableType            = 1;
}



//下注
//BET = 2012;
message BetRequest {
   int32 betCoin               = 1; //
}


//亮牌
//SHOW_CARD = 2010;
message ShowCardRequest {

}

//玩家退出
//USER_QUIT = 2044;
message UserQuitRequest {

}


//退到后台
// USER_ONBACK = 2080;
message UserOnBackRequest {
      int32 leaveState       = 1;
      int32 userId           = 2; //
}

//延时检测
//DELAY_CHECK_REQ = 20010;
message DelayCheckRequest {
      string content          = 1;//内容
}

//重连
//USER_RECONNECT = 2030;
message UserReconnectRequest {
      int32 userId            = 1; //
}

//抢庄
//QIANG_ZHUANG = 2024;
message QiangZhuangRequest {
     int32 qiang              = 1; //
}


//换桌
// CHANGE_TABLE = 20004
message ChangeTableRequest {

}

//加入金币场
//JOIN_TABLE           = 2002
message JoinTableRequest {
     string sid               = 1;
     int32  tableType          =2;
}

//聊天
//SEND_MESSAGE_REQ = 2060;
message MessageRequest {
      string content          = 1;//聊天内容
      int32 toUserId          = 2;//目标用户（0表示自己）
}


//FOUCED_OFFLINE_REQ = 3000;
message ForcedOfflineRequest{
    int32 userId              = 1;
}

//DELAYQUIT_OFFLINE_RESP = 3003;
message KickedOutRequest{
    int32 userId    = 1;
}

// KICKEDOU  = 4001
message KickedOutResponse{
    string desc     = 1;
}

//HALL_REFRESH_COIN = 100;
message HallRefreshCoinRequest{
    int32 userId    = 1;
    int32 type      = 2;
}

// HALL_REFRESH_COIN            = 100
message HallRefreshCoinResponse{
    int32 userId        = 1;
    double coin         = 2;
    bool isInTable      = 3;
}

//推送金币刷新
//PUSH_REFRESH_COIN = 2501;
message SendCoinRefreshResponse {
	int32 userId            = 1;
	double coin             = 2;
	bool isInTable          = 3;
	bool type               = 4;
	int32 addCoin           = 5;
}

//ROOMLIST_REQ = 20004;
message RoomListRequest{
}

message RoomList{
    int32 gameNo               = 1;
    string name                = 2;
    int32 baseScore            = 3;
    int32 limit                = 4;
}

message RoomListResponse{
    repeated RoomList roomList          = 1;
}

// SETCARDSTEST = 20000;
message SetCardsTest
{
    int32 gameId = 1;
    int32 tabletype = 2;
    int32 deskNo = 3;
    string sendData = 4;
    string extraData = 5;
}

//配牌返回
message S2C_SetGameData
{
    string data  = 1;
}

//所有请求接口
message Request {
    enum CMD {
      UNKNOWN                      = 0;
      HALL_REFRESH_COIN            = 100;   //HallRefreshCoinRequest, HallRefreshCoinResponse
      JOIN_TABLE                   = 2002; //加入金币场 JoinTableRequest, JoinTableResponse
      SEND_USER_INFO               = 2009;  //推送玩家信息 TableInfoResponse
      SHOW_CARD                    = 2010;  //亮牌 ShowCardRequest, ShowCardResponse
      BET                          = 2012;  //下注  BetRequest, BetResponse
      SEND_ROUND_RESULT            = 2015;  //推送回合结算 SendRoundResultResponse
      QIANG_ZHUANG                 = 2024;  //抢庄 QiangZhuangRequest, QiangZhuangResponse
      SEND_ZHUANG                  = 2023;  //推送庄家信息   TableInfoResponse
      SEND_USER_CARD               = 2027;  //推送玩家手牌 TableInfoResponse
      SEND_USER_BEST_CARD              = 2059; //推送 提示 和手牌
      USER_RECONNECT               = 2030;  //玩家重连 UserReconnectRequest, UserReconnectResponse

      SEND_USER_RECONNECT          = 2031;  //推送重连信息 SendUserReconnectResponse
      SEND_RECONNECT_QUIT          = 2035;  //玩家重连回到大厅 SendReconnectQuitResponse
      SEND_MESSAGE                 = 2061;  //推送聊天信息 SendMessageResponse
      MESSAGE                      = 2060;  //聊天 MessageRequest
      SEND_COIN_REFRESH            = 2062;  //推送金币刷新 SendCoinRefreshResponse
      USER_QUIT                    = 2044;  //玩家退出 UserQuitRequest, UserQuitResponse

      USER_ONBACK                  = 2080;  //用户退到后台  UserOnBackRequest

      SEND_USER_ONBACK             = 2081;  //退到后台 SendUserOnBackResponse
      USER_READY				   = 2106;  //玩家信息展示 UserReadyRequest, UserReadyResponse
      SEND_GAME_NOTICE             = 2401;  //推送公告 SendGameNoticeResponse
      FORCE_OFFLINE                = 3000;    //
      DELAYQUIT_OFFLINE_RESP       = 3003;    //超时踢出
      KICKEDOUT                    = 4001;    //KickedOutRequest,KickedOutResponse
      SEND_HEART_BEAT              = 10000; //推送心跳 SendHeartBeatResponse
      SEND_REMAIN_TIME             = 20015; //推送延时 SendRemainTimeResponse

      CHANGE_TABLE                 = 20004; //换桌 ChangeTableRequest
      ROOMLIST                     = 20005;
      DELAY_CHECK                  = 20010; //客户端延时检测  DelayCheckRequest, DelayCheckResponse
      SEND_LEAVE_TABLE			   = 20019; //推送玩家离开桌子 SendLeaveTableResponse
      SEND_COIN_TABLE_INFO         = 20017; //玩家中途加入游戏时推送当前桌子信息 SendCoinTableInfoResponse
      SETCARDSTEST = 20000;	//配牌 C2S_SetGameData S2C_SetGameData

    }
    CMD   cmd                                      = 1;      //访问接口
    UserReadyRequest userReadyRequest  	        = 11;	  //用户准备
    UserQuitRequest userQuitRequest                = 17;     //玩家退出

    MessageRequest messageRequest                  = 22;     //聊天
    DelayCheckRequest delayCheckRequest            = 23;     //延时检测
    UserReconnectRequest userReconnectRequest      = 24;     //重连
    BetRequest betRequest                          = 25;     //下注
    ShowCardRequest showCardRequest                = 26;     //
    QiangZhuangRequest qiangZhuangRequest          = 27;     //抢庄
    ChangeTableRequest changeTableRequest          = 28;     //换桌
    KickedOutRequest kickedOutRequest              = 20;
    JoinTableRequest coinJoinTableRequest          = 29;     //
    UserOnBackRequest userOnBackRequest            = 30;     //
    RoomListRequest roomListRequest                = 31;
    HallRefreshCoinRequest hallRefreshCoinRequest  = 32;
    SetCardsTest setCardsTest                      = 33;
}



/*********************  返回数据 ************************/
//玩家信息获取
message UserReadyResponse {
     int32 userId             = 1; //用户ID
     string tableId           = 2;
     int32 owner              = 3;
     int32 state              = 4; //状态
     string gameInfo          = 5;
     int32 gameId             = 6;
     repeated  User  users             = 7; //其它用户状态信息
}


//用户下注
message BetResponse {
     int32 userId             = 1;
     int32 state              = 2;
     int32 postion            = 3;
     repeated User users      = 4;
}

//亮牌
message ShowCardResponse {
      int32 userId            = 1;
      int32 state             = 2;
      OutCard outCardDto      = 3;
}


//抢庄
message QiangZhuangResponse {
     int32 userId             = 1;
     int32 state              = 2;
     repeated User users               = 3;
}


//退出--消息
message UserQuitResponse {
      int32 userId           = 1;
      string nickname        = 2;
      int32 position         = 3;
      string message         = 4;
      string tableId         = 5;
}


//推送重连信息
message SendUserReconnectResponse {
      int32 userId            = 1;
      int32 onLine            = 2;
}

//重连
message UserReconnectResponse {
     string tableId           = 1;
     string seq               = 2;
     int32 gameId             = 3;
     int32 zhuangPos          = 4;
     int32 state              = 5;
     string gameInfo          = 6;
     int32 applicant          = 7;
     int32 applyTime          = 8;
     int64 startApplyTime     = 9;
     int32 remainCardsNum     = 10;

     repeated User users               = 20;
}

message TableInfo{

     string tableId           = 1;
     string seq               = 2;
     int32 gameId             = 3;
     int32 zhuangPos          = 4;
     int32 state              = 5;
     int32 owner              = 6;
     string gameInfo          = 7;

     repeated User users      = 8;
}

// SEND_USER_INFO               = 2009
// SEND_ZHUANG                  = 2023
// SEND_USER_CARD               = 2027
message TableInfoResponse {
      TableInfo tableInfo       = 1;
}

//玩家重连回到大厅
// SEND_RECONNECT_QUIT          = 2035
message SendReconnectQuitResponse {
      int32 userId            = 1;
}


//退到后台
// SEND_USER_ONBACK             = 2081
message SendUserOnBackResponse {
      int32 userId            = 1;
      int32 leaveState        = 2;
}

// DELAY_CHECK                  = 20010
message DelayCheckResponse {
      string content          = 1;
}

//心跳
// SEND_HEART_BEAT              = 10000
message SendHeartBeatResponse {
      int64 currentTime       = 1;
}

//玩家中途加入游戏时推送当前桌子信息
// SEND_COIN_TABLE_INFO         = 20017
message SendCoinTableInfoResponse {
     string tableId           = 1;
     int32 gameId             = 2;
     int32 state              = 3;
     int32 owner              = 4;
     string gameInfo          = 5;
     int32 applicant          = 6;
     int32 applyTime          = 7;
     int64 startApplyTime     = 8;
     int32 zhuangPos          = 9;
     int32 remainCardsNum     = 10;

     repeated User users               = 11;
}

// 加入金币场
message JoinTableResponse {
	string tableId			    = 1;// 桌子ID
	string seq                  = 2;
	int32 gameId			    = 3;// 游戏ID
	int32 state			        = 4;//状态
	int32 channelId			    = 5;// 桌主ID
	string gameInfo		        = 6;// 游戏参数

	repeated User users			= 20; //其它用户状态信息
}

//发送聊天信息
// SEND_MESSAGE                 = 2061
message SendMessageResponse {
      int32 userId            = 1;
      string content          = 2;
      int32 toUserId          = 3;
}


//回合结算--推送消息
// SEND_ROUND_RESULT            = 2015
message SendRoundResultResponse {
    string tableId            = 1;
     int32 state              = 2;
     string gameInfo          = 3;
     int32 zhuangPos          = 4;
     string time              = 5;

     repeated User users      = 20;
}

//推送延时
// SEND_REMAIN_TIME             = 20015
message SendRemainTimeResponse {
     int32 time               = 1;
     int32 type               = 2;
     int32 totalTime          = 3;
}


//推送公告
// SEND_GAME_NOTICE             = 2401
message SendGameNoticeResponse {
      string notice           = 1;
}

//推送玩家离开桌子
// SEND_LEAVE_TABLE			   = 20019; 
message SendLeaveTableResponse {
      int32 userId           = 1;
}

//所有应答接口
message Response {
    enum ErrorCode {
      NO_ERROR                                            = 0;
      ERROR                                               = 400;// 返回没有错误发生
      USER_READY_ERROR                                    = 3010;                     // 玩家准备异常
      ACCOUNT_NOT_ENOUGH                                  = 3006;
      TABLE_NOT_FIND_ERROR                                = 3008;                     // 牌桌不存在
      NOT_IN_TABLE                                        = 3011;                     // 未加入此房间
      JOIN_TABLE_ERROR                                    = 3007;                     // 加入牌桌失败
      TABLE_NO_POSITION                                   = 3009;                     // 此房间已经人满
      USER_QUIT_ERROR                                     = 3013;                     // 玩家退出异常
      NOT_ALLOW_QUIT                                      = 3014;                     // 无法退出房间
      WAITING_RESPONSE                                    = 3043;                     // 等待其他玩家响应
      USER_MP_ERROR                                       = 3200;                     // 明牌失败
      TABLE_HASSTART_POSITION                             = 3071;                     // 此房间游戏已开始
      RECONNET_ERROR                                      = 3025;                     // 重连错误
      SEND_MESSAGE_ERROR                                  = 3040;                     // 发送信息失败
      USER_ONBACK_ERROR                                   = 3056;                     // 用户退后台消息
      DELAY_CHECK_ERROR                                   = 3201;                     // 延时检测异常
      RE_JOIN_TABLE_ERROR                                 = 3026;                     // 重新加入桌子失败
      USER_BET_ERROR                                      = 3077;                     // 用户下注失败
      USER_SHOWCARD_ERROR                                 = 3076;                     // 用户亮牌失败
      QIANG_ZHUANG_ERROR                                  = 3075;                     // 抢庄
      USER_CHANGE_TABLE_ERROR                             = 3069;                     // 玩家换桌异常
      USER_CHANGE_TABLE_STATE_ERROR                       = 3070;                     //玩家该状态下不能换桌
      ROOM_LIST_ERROR                                     = 3091;
      CHANNELID_GAMENO_ERROR                              = 3092;                     //
      USER_QUIT_FOR_OVERTIME_ERROR                        = 3093;                     //您已经长时间没有操作，已退出游戏房间
      USER_BAN                                            = 30002;                    //账号异常...无法开始游戏,请联系客服
      USER_NOT_FOUND_ERROR                                = 3005;                     //玩家不存在
      FORCED_OFFLINE                                      = 30001;                    //账号在其他地方登录,连接断开,请重新登录
      PUSH_USER_TESTDATA_ERROR                            = 500;                      // 配牌失败

    }
    ErrorCode error                                                     = 1 ;   // 表示本次请求状态
    int64 serverTime                                                    = 2;                        // 服务器时间
    Request.CMD     cmd                                                 = 3;                        // 接口
    UserReadyResponse userReadyResponse	    	                        = 11;                       //玩家信息获取
    UserQuitResponse userQuitResponse                                   = 18;                       //玩家退出消息
    SendUserReconnectResponse sendUserReconnectResponse                 = 27;                 //推送重连信息
    SendReconnectQuitResponse sendReconnectQuitResponse                 = 28;                 //

    SendUserOnBackResponse sendUserOnBackResponse                       = 31;                       //退到后台

    DelayCheckResponse delayCheckResponse                               = 33;                       //延时检测
    UserReconnectResponse userReconnectResponse                         = 34;                       //重连
    SendHeartBeatResponse sendHeartBeatResponse                         = 35;                       //心跳
    BetResponse betResponse                                             = 36;                       //下注
    ShowCardResponse showCardResponse                                   = 37;                       //亮牌
    QiangZhuangResponse qiangZhuangResponse                             = 38;                       //抢庄
    SendCoinTableInfoResponse sendCoinTableInfoResponse                 = 39;                //
    JoinTableResponse joinTableResponse                                 = 40;                       //
    SendMessageResponse sendMessageResponse                             = 41;                       //发送消息
    KickedOutResponse kickedOutResponse                                 = 42;
    TableInfoResponse tableInfoResponse                                 = 43;                       //推送用户信息
    SendRoundResultResponse sendRoundResultResponse                     = 44;                //
    SendRemainTimeResponse sendRemainTimeResponse                       = 45;                       //推送延时
    SendGameNoticeResponse sendGameNoticeResponse                       = 46;                       //推送公告
    SendLeaveTableResponse sendLeaveTableResponse	                    = 47;						//离开桌子
    RoomListResponse roomListResponse                                   = 50;
    //SendUserCardResponse sendUserCardResponse                           = 51;
    SendCoinRefreshResponse sendCoinRefreshResponse                     = 52;
    HallRefreshCoinResponse hallRefreshCoinResponse                     = 53;
}

